--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Menu de navigation du site -->
 <ul class="navbar">
   <li><a href="index.html">Home page</a>
-  <li><a href="reflexions.html">Contactez-moi</a>
+  <li><a href="https://u4itel.info/reflexions.html">Contactez-moi</a>
   <li><a href="ville.html">Mes matières, ma ville</a>
   <li><a href="liens.html">Gallerie</a>
 </ul>
