--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <ul class="navbar">
   <li><a href="index.html">Home page</a>
   <li><a href="https://u4itel.info/reflexions.html">Contactez-moi</a>
-  <li><a href="ville.html">Mes matières, ma ville</a>
-  <li><a href="liens.html">Gallerie</a>
+  <li><a href="https://u4itel.info/ville.html">Mes matières, ma ville</a>
+  <li><a href="https://u4itel.info/liens.html">Gallerie</a>
 </ul>
 
 <!-- Contenu principal -->
