--- a/index.html
+++ b/index.html
@@ -30,6 +30,100 @@
   (et sans prix des services qui se font sur une boutique en ligne -
  <a href="https://neven-109579-104263.square.site/"> Vente en ligne EI Neven</a>).</p> 
 <button onclick="myFunction()">Ouvrir les fenêtres</button>
+  <!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+  <!--you put the link to your own stylesheet above--->
+	<title>Ice Skater Flip-Book</title>
+</head>
+<body>
+<h1>Ice Skater Flip-Book</h1>
+<section class="I"></section>
+<section class="II"></section>
+<section class="III"></section>
+<section class="IV"></section>
+<section class="V"></section>
+<section class="VI"></section>
+<section class="VII"></section>
+<section class="VIII"></section>
+<section class="IX"></section>
+<section class="X"></section>
+<section class="XI"></section>
+<section class="XII"></section>
+<section class="XIII"></section>
+<section class="XIV"></section>
+
+</body>
+</html>
+view rawindex.html hosted with ❤ by GitHub
+html{
+	box-sizing: border-box;	
+}
+body{
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: Helvetica,sans-serif;
+}
+h1{
+	position: fixed;
+	width: 100%;
+	font-size:250%;
+	color: #fff;
+	text-align: center;
+}
+section{
+	background-repeat: no-repeat;
+	background-attachment:fixed;
+	background-position: center top;
+	width: 100%;
+	height: 100vh;
+}
+/*--Insert your own background image below---*/
+.I{
+background-image:url(Images/IceSkater1.JPG);
+}
+.II{
+	background-image: url(Images/IceSkater2.JPG);
+}
+.III{
+	background-image: url(Images/IceSkater3.JPG);
+}
+.IV{
+	background-image: url(Images/IceSkater4.JPG);
+}
+.V{
+	background-image: url(Images/IceSkater5.JPG);
+}
+.VI{
+	background-image: url(Images/IceSkater6.JPG);
+}
+.VII{
+	background-image: url(Images/IceSkater7.JPG);
+}
+.VIII{
+	background-image: url(Images/IceSkater8.JPG);
+}
+.IX{
+	background-image: url(Images/IceSkater9.JPG);
+}
+.X{
+	background-image: url(Images/IceSkater10.JPG);
+}
+.XI{
+	background-image: url(Images/IceSkater11.JPG);
+}
+.XII{
+	background-image: url(Images/IceSkater12.JPG);
+}
+
+.XIII{
+	background-image: url(Images/IceSkater13.JPG);
+}
+
+.XIV{
+	background-image: url(Images/IceSkater14.JPG);
 
 <script>
 function myFunction() {
@@ -41,6 +135,6 @@ function myFunction() {
 </body>
 </html>
 <!-- Signer et dater la page, c'est une question de politesse! -->
-<address>Fait le 7 décembre 2024.<br></address>
+<address>Fait le 1er octombre 2025.<br></address>
 </body>
 </html>
