--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <li><a href="index.html">Home page</a>
   <li><a href="https://u4itel.info/reflexions.html">Contactez-moi</a>
   <li><a href="https://u4itel.info/ville.html">Mes matières, ma ville</a>
-  <li><a href="https://u4itel.info/liens.html">Gallerie</a>
+  <li><a href="https://u4itel.info/liens.html">Gallerie</a>a>
 </ul>
 
 <!-- Contenu principal -->
@@ -29,94 +29,6 @@
 
 <button onclick="myFunction()">Ouvrir les fenêtres</button>
 <body>
-<h1>Ice Skater Flip-Book</h1>
-<section class="I"></section>
-<section class="II"></section>
-<section class="III"></section>
-<section class="IV"></section>
-<section class="V"></section>
-<section class="VI"></section>
-<section class="VII"></section>
-<section class="VIII"></section>
-<section class="IX"></section>
-<section class="X"></section>
-<section class="XI"></section>
-<section class="XII"></section>
-<section class="XIII"></section>
-<section class="XIV"></section>
-
-</body>
-</html>
-view rawindex.html hosted with ❤ by GitHub
-html{
-	box-sizing: border-box;	
-}
-body{
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	font-family: Helvetica,sans-serif;
-}
-h1{
-	position: fixed;
-	width: 100%;
-	font-size:250%;
-	color: #fff;
-	text-align: center;
-}
-section{
-	background-repeat: no-repeat;
-	background-attachment:fixed;
-	background-position: center top;
-	width: 100%;
-	height: 100vh;
-}
-/*--Insert your own background image below---*/
-.I{
-background-image:url(Images/IceSkater1.JPG);
-}
-.II{
-	background-image: url(Images/IceSkater2.JPG);
-}
-.III{
-	background-image: url(Images/IceSkater3.JPG);
-}
-.IV{
-	background-image: url(Images/IceSkater4.JPG);
-}
-.V{
-	background-image: url(Images/IceSkater5.JPG);
-}
-.VI{
-	background-image: url(Images/IceSkater6.JPG);
-}
-.VII{
-	background-image: url(Images/IceSkater7.JPG);
-}
-.VIII{
-	background-image: url(Images/IceSkater8.JPG);
-}
-.IX{
-	background-image: url(Images/IceSkater9.JPG);
-}
-.X{
-	background-image: url(Images/IceSkater10.JPG);
-}
-.XI{
-	background-image: url(Images/IceSkater11.JPG);
-}
-.XII{
-	background-image: url(Images/IceSkater12.JPG);
-}
-
-.XIII{
-	background-image: url(Images/IceSkater13.JPG);
-}
-
-.XIV{
-	background-image: url(Images/IceSkater14.JPG);
-
-<script>
 function myFunction() {
   window.open("https://www.u4itel.info/Politique-de-Confidentialite");
   window.open("https://www.u4itel.info/cgu/");
