--- a/index.html
+++ b/index.html
@@ -14,25 +14,16 @@
   <li><a href="index.html">Home page</a>
   <li><a href="https://u4itel.info/reflexions.html">Contactez-moi</a>
   <li><a href="https://u4itel.info/ville.html">Mes matières, ma ville</a>
-  <li><a href="https://u4itel.info/liens.html">Gallerie</a>a>
+  <li><a href="https://u4itel.info/liens.html">Gallerie</a>
 </ul>
 
 <!-- Contenu principal -->
-<h1>1. Traducteur et professeur Laurent; 2. EI NEVEN - Maizières-lès-Metz</h1>
+<h1>1. Вие сте на сайт с поддомейн,
+койтио е собственост на Едноличен търговец "Невен"</h1>
 
 <p>Bienvenue sur ma page et de l'entreprise NEVEN de Maizières ! 
-  Ce site est destiné à la publicité de M. Laurent CHERET qui exerce en tant que professeur pour le compte d'entreprises pour des cours particuliers – 
-  cette partie décrit le site comme un site personnel.</p>
-<p>Mais ce site est aussi un site professionnel, car il est utilisé par EI Neven, propriétaire Neli CHERET de Maizières-lès-Metz, France.<p>
-<p>Editeur : Neli CHERET</p>
-<p>Hébergeur : Netlify, San Francisco, USA.</p>
+ 
 
-<button onclick="myFunction()">Ouvrir les fenêtres</button>
-<body>
-function myFunction() {
-  window.open("https://www.u4itel.info/Politique-de-Confidentialite");
-  window.open("https://www.u4itel.info/cgu/");
-}
 </script>
 
 </body>
