--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>1. Вие сте на сайт с поддомейн,
 койтио е собственост на Едноличен търговец "Невен"</h1>
 
-<p>Bienvenue sur ma page et de l'entreprise NEVEN de Maizières ! 
+<p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
  
 
 </script>
