--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
  
-
+  <body>
+    <h1>PDF Example</h1>
+    <p>Open a PDF file <a href="/uploads/media/default/0001/01/OtkrivateliOktomvri.pdf">example</a>.</p>
+  </body>
+</html>
 </script>
 
 </body>
