--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </ul>
 
 <!-- Contenu principal -->
-<h1>1. Вие сте на сайт с поддомейн,
+<h1>1. Вие сте на сайт с поддомейн otkrivateli.u4itel.info или otkrivateli.netlify.app,
 койтио е собственост на Едноличен търговец "Невен"</h1>
 
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
  
   <body>
     <h1>PDF Example</h1>
-    <p>Open a PDF file <a href="/uploads/media/default/0001/01/OtkrivateliOktomvri.pdf">example</a>.</p>
+    <p>Open a PDF file <a href="https://github.com/neven1976/vestnik/blob/main/OtkrivateliOktomvri.pdf">example</a>.</p>
   </body>
 </html>
 </script>
