--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
  
   <body>
-    <h1>PDF Example</h1>
-    <p>Open a PDF file <a href="https://github.com/neven1976/vestnik/blob/main/OtkrivateliOktomvri.pdf">example</a>.</p>
+    <iframe src="" width="600" height="800" style="border:none;"></iframe>
+
   </body>
 </html>
 </script>
