--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
  
   <body>
-    <iframe src="https://github.com/neven1976/vestnik/blob/main/OtkrivateliOktomvri.pdf" width="600" height="800" style="border:none;"></iframe>
+   <object data="OtkrivateliOktomvri.pdf" width="1000" height="1000" type='application/pdf'></object>
 
   </body>
 </html>
