--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Contenu principal -->
 <h1>1. Вие сте на сайт с поддомейн otkrivateli.u4itel.info или otkrivateli.netlify.app,
-койтио е собственост на Едноличен търговец "Невен"</h1>
+който е собственост на Едноличен търговец "Невен"</h1>
 
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
  
