--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
  
   <body>
-   <object data="OtkrivateliOktomvri.pdf" width="1000" height="1000" type='application/pdf'></object>
+   <object data="OtkrivateliOktomvri2025.pdf" width="1000" height="1000" type='application/pdf'></object>
 
   </body>
 </html>
