--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <title>traducteur et professeur Laurent; EI NEVEN</title>
-  <link rel="icon" href="images/Neven.ico" />
+  <link rel="icon" href="test/Neven.ico" />
   <link rel="stylesheet" href="monstyle.css"   
 
 </head>
