--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 който е собственост на Едноличен търговец "Невен"</h1>
 
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
- 
+ <div class="_df_book" source="test/Откриватели_тримесечно_зимни_празници_2025_2026☃️.pdf"></div>
   <body>
    <object data="OtkrivateliOktomvri2025.pdf" width="1000" height="1000" type='application/pdf'></object>
 
