--- a/index.html
+++ b/index.html
@@ -22,7 +22,95 @@
 който е собственост на Едноличен търговец "Невен"</h1>
 
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
- <div class="_df_book" source="test/Откриватели_тримесечно_зимни_празници_2025_2026☃️.pdf"></div>
+<button onclick="myFunction()">Ouvrir les fenêtres</button>
+<body>
+<h1>☃️Откриватели_тримесечно_зимни_празници_2025_2026☃️ Flip-Book</h1>
+<section class="I"></section>
+<section class="II"></section>
+<section class="III"></section>
+<section class="IV"></section>
+<section class="V"></section>
+<section class="VI"></section>
+<section class="VII"></section>
+<section class="VIII"></section>
+<section class="IX"></section>
+<section class="X"></section>
+<section class="XI"></section>
+<section class="XII"></section>
+<section class="XIII"></section>
+<section class="XIV"></section>
+
+</body>
+</html>
+view rawindex.html hosted with ❤ by GitHub
+html{
+	box-sizing: border-box;	
+}
+body{
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: Helvetica,sans-serif;
+}
+h1{
+	position: fixed;
+	width: 100%;
+	font-size:250%;
+	color: #fff;
+	text-align: center;
+}
+section{
+	background-repeat: no-repeat;
+	background-attachment:fixed;
+	background-position: center top;
+	width: 100%;
+	height: 100vh;
+}
+/*--Insert your own background image below---*/
+.I{
+background-image:url(test/otkr1.JPG);
+}
+.II{
+	background-image: url(test/otkr2.JPG);
+}
+.III{
+	background-image: url(test/otkr3.JPG);
+}
+.IV{
+	background-image: url(test/otkr4.JPG);
+}
+.V{
+	background-image: url(test/otkr5.JPG);
+}
+.VI{
+	background-image: url(test/otkr6.JPG);
+}
+.VII{
+	background-image: url(test/otkr7.JPG);
+}
+.VIII{
+	background-image: url(test/otkr8.JPG);
+}
+.IX{
+	background-image: url(test/otkr9.JPG);
+}
+.X{
+	background-image: url(test/otkr10.JPG);
+}
+.XI{
+	background-image: url(test/otkr11.JPG);
+}
+.XII{
+	background-image: url(test/otkr12.JPG);
+}
+
+.XIII{
+	background-image: url(test/otkr13.JPG);
+}
+
+.XIV{
+	background-image: url(test/otkr14.JPG);
+
   <body>
    <object data="OtkrivateliOktomvri2025.pdf" width="1000" height="1000" type='application/pdf'></object>
 
