--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 който е собственост на Едноличен търговец "Невен"</h1>
 
 <p>Четете новия български научен и непретенциозен (много малък) вестник "Откриватели"!</p> 
-<button onclick="myFunction()">Ouvrir les fenêtres</button>
 <body>
 <!DOCTYPE html>
 <html>
@@ -187,7 +186,7 @@ img {
     </div>
   </div>
 </div>
-
+</html>
 <script>
 let slideIndex = 1;
 showSlides(slideIndex);
